# yaap

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  builder.py  docker-compose.yml  pyproject.toml  requirements.txt  yaap.py
agents/: arsenal.py  bruteforce.py  checklist.py  condition.py  early_auth.py  encoder.py  final_reporter.py  injector.py  login_injector.py  modifier.py  observer.py  researcher.py  scout.py  validator.py
configs/: arsenal.yaml  credentials.json
prompts/: bug_hunting_101.md  checklist.md  final_report_propmt.md  hunt_prompt.md  observer.md  recon_prompt.md  research_prompt.md  validator.md
states/: agent_state.py
tests/: test_vulnerability_testers.py
tools/: api_security_tester.py  auth_escalation_tester.py  authentication_tester.py  command_injection_tester.py  cookie_security_tester.py  cors_headers_tester.py  crawler.py  csrf_session_tester.py  csrf_tester.py  directory_discovery.py  executor.py  file_upload_inclusion_tester.py  form_discovery.py  form_injection.py  idor_tester.py  infrastructure_tester.py  input_validation_tester.py  nosql_ldap_tester.py  path_traversal_tester.py  pentester.py  session_security_tester.py  sqli_tester.py  ssrf_tester.py  ssti_tester.py  tool_setup.py  websearch.py  xss_tester.py  xxe_tester.py
utils/: ansi.py  auth.py  extractor.py  logging.py  markdown.py  parser.py  pdf_reporter.py  reasoning.py  reporter.py  stream.py  structured.py  text.py  toolbind.py  trace.py
